--- a/index__.html
+++ b/index__.html
@@ -148,12 +148,15 @@
                 id="navbarNavDropdown"
               >
                 <ul class="nav navbar-nav nav-style">
-                  <li id="index"><a href="index.html">Home</a></li>
-                  <li id="about-us"><a href="about-us.html">About Us</a></li>
-                  <li id="services"><a href="services.html">Services</a></li>
-                  <li id="contact-us">
-                    <a href="contact-us.html">Contact us</a>
+                  <li class="active"><a href="index.html">Home</a></li>
+                  <li><a href="about-us.html">About Us</a></li>
+                  <li><a href="services.html">Services</a></li>
+                  <li><a href="detail.html#process-ins">Inverters</a></li>
+                  <li>
+                    <a href="detail.html#hvac-components">HVAC Components</a>
                   </li>
+                  <li><a href="detail.html#automation">Automation</a></li>
+                  <li><a href="contact-us.html">Contact us</a></li>
                 </ul>
               </div>
             </div>
@@ -450,13 +453,10 @@
                                   font-weight: 700;
                                   font-size: 55px;
                                 "
-                                >JESR AL AMANAH
-                              </span>
-                              <br />
+                                >A&amp;T <br />
+                                Engineering</span
+                              >
                             </div>
-                            <small class="text-white text-uppercase">
-                              BUILDINGS MAINTENANCE</small
-                            >
                           </div>
                         </div>
                       </div>
@@ -1405,16 +1405,21 @@
                 <div class="col-lg-4 col-md-4 col-sm-4 m-b30">
                   <div class="dlab-box">
                     <div class="dlab-media">
-                      <img
-                        src="uploads/drive-automation.jpg"
-                        alt=""
-                        style="height: 275px"
-                      />
+                      <a href="detail.html#automation-drives">
+                        <img
+                          src="uploads/drive-automation.jpg"
+                          alt=""
+                          style="height: 275px"
+                      /></a>
                     </div>
                     <div class="dlab-info p-a20 text-center bg-gray">
                       <div class="p-lr20">
                         <h4 class="m-a0 bg-primary service-head">
-                          Solar System Installation
+                          <a
+                            href="detail.html#automation-drives"
+                            class="text-white"
+                            >Automation &amp; Drives</a
+                          >
                         </h4>
                       </div>
                     </div>
@@ -1423,16 +1428,19 @@
                 <div class="col-lg-4 col-md-4 col-sm-4 m-b30">
                   <div class="dlab-box">
                     <div class="dlab-media">
-                      <img
-                        src="uploads/drive-automation.jpg"
-                        alt=""
-                        style="height: 275px"
-                      />
+                      <a href="detail.html#frequency">
+                        <img
+                          src="uploads/freqancyControll.png"
+                          alt=""
+                          style="height: 275px"
+                      /></a>
                     </div>
                     <div class="dlab-info p-a20 text-center bg-gray">
                       <div class="p-lr20">
                         <h4 class="m-a0 bg-primary service-head">
-                          MEP (Mechanical, Electrical and Plumbing) works
+                          <a href="detail.html#frequency" class="text-white"
+                            >Frequency Control Inverters (VFD’s)</a
+                          >
                         </h4>
                       </div>
                     </div>
@@ -1441,33 +1449,19 @@
                 <div class="col-lg-4 col-md-4 col-sm-4 m-b30">
                   <div class="dlab-box">
                     <div class="dlab-media">
-                      <img
-                        src="uploads/drive-automation.jpg"
-                        alt=""
-                        style="height: 275px"
-                      />
-                    </div>
-                    <div class="dlab-info p-a20 text-center bg-gray">
-                      <div class="p-lr20">
-                        <h4 class="m-a0 bg-primary service-head">HVAC</h4>
-                      </div>
-                    </div>
-                  </div>
-                </div>
-                <div class="col-lg-4 col-md-4 col-sm-4 m-b30">
-                  <div class="dlab-box">
-                    <div class="dlab-media">
-                      <img
-                        src="uploads/drive-automation.jpg"
-                        alt=""
-                        style="height: 275px"
-                      />
+                      <a href="detail.html#automation">
+                        <img
+                          src="uploads/drive-automation-1.jpg"
+                          alt=""
+                          style="height: 275px"
+                      /></a>
                     </div>
                     <div class="dlab-info p-a20 text-center bg-gray">
                       <div class="p-lr20">
                         <h4 class="m-a0 bg-primary service-head">
-                          Power Cable Laying, Glanding & Termination and wall
-                          Cutting
+                          <a href="detail.html#automation" class="text-white"
+                            >Automation</a
+                          >
                         </h4>
                       </div>
                     </div>
@@ -1476,16 +1470,19 @@
                 <div class="col-lg-4 col-md-4 col-sm-4 m-b30">
                   <div class="dlab-box">
                     <div class="dlab-media">
-                      <img
-                        src="uploads/drive-automation.jpg"
-                        alt=""
-                        style="height: 275px"
-                      />
+                      <a href="detail.html#smart-factory">
+                        <img
+                          src="uploads/smart-solution.jpg"
+                          alt=""
+                          style="height: 275px"
+                      /></a>
                     </div>
                     <div class="dlab-info p-a20 text-center bg-gray">
                       <div class="p-lr20">
                         <h4 class="m-a0 bg-primary service-head">
-                          Any type of Containment installation Cutting
+                          <a href="detail.html#smart-factory" class="text-white"
+                            >Smart Factory Projects</a
+                          >
                         </h4>
                       </div>
                     </div>
@@ -1494,18 +1491,19 @@
                 <div class="col-lg-4 col-md-4 col-sm-4 m-b30">
                   <div class="dlab-box">
                     <div class="dlab-media">
-                      <img
-                        src="uploads/drive-automation.jpg"
-                        alt=""
-                        style="height: 275px"
-                      />
+                      <a href="detail.html#process-ins">
+                        <img
+                          src="uploads/industerial-process.jpg"
+                          alt=""
+                          style="height: 275px"
+                      /></a>
                     </div>
                     <div class="dlab-info p-a20 text-center bg-gray">
                       <div class="p-lr20">
                         <h4 class="m-a0 bg-primary service-head">
-                          Load Banks Sale (Authorized Agent of US Based Company
-                          LBD for MENA Region including Pakistan and
-                          Afghanistan)
+                          <a href="detail.html#process-ins" class="text-white"
+                            >PROCESS INSTRUMENTATION</a
+                          >
                         </h4>
                       </div>
                     </div>
@@ -1514,17 +1512,18 @@
                 <div class="col-lg-4 col-md-4 col-sm-4 m-b30">
                   <div class="dlab-box">
                     <div class="dlab-media">
-                      <img
-                        src="uploads/drive-automation.jpg"
-                        alt=""
-                        style="height: 275px"
-                      />
+                      <a href="services.html#hvac-components">
+                        <img src="uploads/ac.png" alt="" style="height: 275px"
+                      /></a>
                     </div>
                     <div class="dlab-info p-a20 text-center bg-gray">
                       <div class="p-lr20">
                         <h4 class="m-a0 bg-primary service-head">
-                          Design Assembly/ Installation Control Panel/LCP/ATS
-                          Panel/Syn Panel/Power panel & etc.
+                          <a
+                            href="services.html#hvac-components"
+                            class="text-white"
+                            >HVAC Components</a
+                          >
                         </h4>
                       </div>
                     </div>
@@ -1533,71 +1532,21 @@
                 <div class="col-lg-4 col-md-4 col-sm-4 m-b30">
                   <div class="dlab-box">
                     <div class="dlab-media">
-                      <img
-                        src="uploads/drive-automation.jpg"
-                        alt=""
-                        style="height: 275px"
-                      />
+                      <a href="detail.html#industrial-compressors">
+                        <img
+                          src="uploads/industerial-comresor.jpg"
+                          alt=""
+                          style="height: 275px"
+                      /></a>
                     </div>
                     <div class="dlab-info p-a20 text-center bg-gray">
                       <div class="p-lr20">
                         <h4 class="m-a0 bg-primary service-head">
-                          Electrical Items Supply
-                        </h4>
-                      </div>
-                    </div>
-                  </div>
-                </div>
-                <div class="col-lg-4 col-md-4 col-sm-4 m-b30">
-                  <div class="dlab-box">
-                    <div class="dlab-media">
-                      <img
-                        src="uploads/drive-automation.jpg"
-                        alt=""
-                        style="height: 275px"
-                      />
-                    </div>
-                    <div class="dlab-info p-a20 text-center bg-gray">
-                      <div class="p-lr20">
-                        <h4 class="m-a0 bg-primary service-head">
-                          LED Lights Supply & Installation
-                        </h4>
-                      </div>
-                    </div>
-                  </div>
-                </div>
-                <div class="col-lg-4 col-md-4 col-sm-4 m-b30">
-                  <div class="dlab-box">
-                    <div class="dlab-media">
-                      <img
-                        src="uploads/drive-automation.jpg"
-                        alt=""
-                        style="height: 275px"
-                      />
-                    </div>
-                    <div class="dlab-info p-a20 text-center bg-gray">
-                      <div class="p-lr20">
-                        <h4 class="m-a0 bg-primary service-head">
-                          Design & supply Home Automation (SMART switch &
-                          socket)
-                        </h4>
-                      </div>
-                    </div>
-                  </div>
-                </div>
-                <div class="col-lg-4 col-md-4 col-sm-4 m-b30">
-                  <div class="dlab-box">
-                    <div class="dlab-media">
-                      <img
-                        src="uploads/drive-automation.jpg"
-                        alt=""
-                        style="height: 275px"
-                      />
-                    </div>
-                    <div class="dlab-info p-a20 text-center bg-gray">
-                      <div class="p-lr20">
-                        <h4 class="m-a0 bg-primary service-head">
-                          AMC for MEP (Annual maintenance contract)
+                          <a
+                            href="detail.html#industrial-compressors"
+                            class="text-white"
+                            >Industrial Compressors</a
+                          >
                         </h4>
                       </div>
                     </div>
@@ -1795,22 +1744,42 @@
                         </ul>
                     </div>
                 </div>-->
-              <div class="col-lg-8 col-md-6 col-sm-6 footer-col-4">
+              <div class="col-lg-6 col-md-6 col-sm-6 footer-col-4">
                 <h4 class="m-b15 text-uppercase">About Us</h4>
                 <div class="widget recent-posts-entry">
                   <p>
-                    JABM is providing reliable and competitive services to the
-                    clients, with a view to narrow the widening gap between
-                    demand and supply fuelled by today’s’ unprecedented upturns
-                    in sectors of our operation. With exclusive arrangements
-                    with the world class manufacturers and suppliers, JABM
-                    becomes a natural choice for solutions, the reason we say
-                    “Let’s grow to-gather”.
+                    <strong>A&amp;T</strong> Engineering are professional
+                    industrial equipment’s and services provider for Automation,
+                    Process Control, Instrumentation, Electrical. have in over a
+                    half a century evolved into a strong market and technical
+                    solutions provider. The Company has diversified into five
+                    major business areas
                   </p>
                 </div>
               </div>
-
-              <div class="col-lg-4 col-md-6 col-sm-6 footer-col-4">
+              <div class="col-lg-3 col-md-6 col-sm-6 footer-col-4">
+                <div class="widget widget_getintuch">
+                  <h4 class="m-b15 text-uppercase">Call Now</h4>
+                  <div class="dlab-separator-outer m-b10">
+                    <div class="dlab-separator bg-white style-skew"></div>
+                  </div>
+                  <ul>
+                    <li>
+                      <i class="fa fa-mobile"></i><strong>phone</strong>+92 42
+                      35950001
+                    </li>
+                    <li>
+                      <i class="fa fa-mobile"></i><strong>Watsapp</strong>+92
+                      300 0999321
+                    </li>
+                    <li>
+                      <i class="fa fa-fax"></i><strong>FAX</strong>+92 42
+                      32188620
+                    </li>
+                  </ul>
+                </div>
+              </div>
+              <div class="col-lg-3 col-md-6 col-sm-6 footer-col-4">
                 <div class="widget widget_getintuch">
                   <h4 class="m-b15 text-uppercase">Contact us</h4>
                   <div class="dlab-separator-outer m-b10">
@@ -1818,17 +1787,13 @@
                   </div>
                   <ul>
                     <li>
-                      <i class="ti-location-pin"></i><strong>address</strong>P.
-                      O. Box 22189 AJMAN – UAE
+                      <i class="ti-location-pin"></i><strong>address</strong>88,
+                      Block G-2, Wapda Town, Lahore-54000 Pakistan
                     </li>
 
                     <li>
                       <i class="fa fa-envelope"></i
-                      ><strong>email</strong>info@jabmME.com
-                    </li>
-                    <li>
-                      <i class="fa fa-mobile"></i><strong>phone</strong>+971 56
-                      1432 706
+                      ><strong>email</strong>info@ant.engineering
                     </li>
                   </ul>
                 </div>
@@ -1844,33 +1809,12 @@
                 <span>© Copyright 2023</span>
               </div>
               <div class="col-lg-4 col-md-4 text-center">
-                <span>
-                  Developed By
-                  <a href="https://www.linkedin.com/in/muhammad-haris-javed/"
-                    >Haris</a
-                  >
-                </span>
+                <span> Developed By Logics92 </span>
               </div>
               <div class="col-lg-4 col-md-4 text-right">
-                <div class="dlab-topbar-right">
-                  <ul class="social-bx list-inline pull-right">
-                    <li>
-                      <a
-                        href="https://www.facebook.com/innocent.hashi1"
-                        target="_blank"
-                        class="fa fa-facebook"
-                      ></a>
-                    </li>
-
-                    <li>
-                      <a
-                        href="https://www.linkedin.com/in/muhammad-haris-javed/"
-                        target="_blank"
-                        class="fa fa-linkedin"
-                      ></a>
-                    </li>
-                  </ul>
-                </div>
+                <a href="about-us.html"> About Us</a>
+                <a href="services">Services</a>
+                <a href="contact-us.html"> Contact Us</a>
               </div>
             </div>
           </div>
