--- a/about-us.html
+++ b/about-us.html
@@ -123,7 +123,7 @@
               <!-- website logo -->
               <div class="logo-header mostion">
                 <a href="index.html"
-                  ><img src="images/logo.png" width="193" height="89" alt=""
+                  ><img src="images/logo.jpg" width="193" height="89" alt=""
                 /></a>
               </div>
               <!-- nav toggle button -->
