--- a/contact-us.html
+++ b/contact-us.html
@@ -123,7 +123,7 @@
               <!-- website logo -->
               <div class="logo-header mostion">
                 <a href="index.html"
-                  ><img src="images/logo.png" width="193" height="89" alt=""
+                  ><img src="images/logo.jpg" width="193" height="89" alt=""
                 /></a>
               </div>
               <!-- nav toggle button -->
@@ -210,8 +210,7 @@
                     to building lasting relationships with our clients.
                     <br /><br />
                     You can contact us through various channels, including
-                    phone, email, or by filling out the contact form on our
-                    website. Whatever method you choose, rest assured that we
+                    phone, email. Whatever method you choose, rest assured that we
                     are here to listen, guide, and support you on your journey
                     towards success. <br /><br />
                     Join the countless satisfied customers who have already
