--- a/detail.html
+++ b/detail.html
@@ -78,7 +78,7 @@ src: url('chrome-extension://liecbddmkiiihnedobmlmillhodjkdmb/fonts/CircularXXWe
           <div class="main-bar bg-primary clearfix ">
               <div class="container clearfix">
                   <!-- website logo -->
-                  <div class="logo-header mostion"><a href="index.html"><img src="images/logo.png" width="193" height="89" alt=""></a></div>
+                  <div class="logo-header mostion"><a href="index.html"><img src="images/logo.jpg" width="193" height="89" alt=""></a></div>
                   <!-- nav toggle button -->
         <button class="navbar-toggler collapsed navicon justify-content-end" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
           <span></span>
@@ -190,8 +190,8 @@ Speed Drives and Soft starters and Industrial Process Instrumentation. </p>
               <div class="dlab-box">
                 <div class="dlab-info m-t30">
                   <h4 class="dlab-title m-t0"><a href="#frequency">Frequency Control Inverters (VFDs)</a></h4>
-                  <p>A&amp;T Engineering provides complete drive solutions at competitive price and after-sales services
-for drives, designed to save energy, maximize efficiency and reduce costs. A&amp;T Engineering
+                  <p>JABM Engineering provides complete drive solutions at competitive price and after-sales services
+for drives, designed to save energy, maximize efficiency and reduce costs. JABM Engineering
 specialize in developing drive solutions for a wide variety of applications in dedicated business
 areas such as water and waste water, chemical, heating &amp; ventilation, refrigeration, food &amp;
 beverage lift application and general industry. The new generation of frequency converters are
@@ -370,7 +370,7 @@ instrument package, Siemens offers a solution for all customers.
                   <div class="col-lg-6 col-md-6 col-sm-6 footer-col-4">
                    <h4 class="m-b15 text-uppercase">About Us</h4>
                       <div class="widget recent-posts-entry">
-                       <p><strong>A&amp;T</strong>  Engineering are professional industrial equipment’s and services provider for Automation, Process Control, Instrumentation, Electrical. have in over a half a century evolved into a strong market and technical solutions provider. The Company has diversified into five major business areas</p>
+                       <p><strong>JABM</strong>  Engineering are professional industrial equipment’s and services provider for Automation, Process Control, Instrumentation, Electrical. have in over a half a century evolved into a strong market and technical solutions provider. The Company has diversified into five major business areas</p>
                       </div>
                   </div>
                   <div class="col-lg-3 col-md-6 col-sm-6 footer-col-4">
