--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
               <!-- website logo -->
               <div class="logo-header mostion">
                 <a href="index.html"
-                  ><img src="images/logo.png" width="193" height="89" alt=""
+                  ><img src="images/logo.jpg" width="193" height="89" alt=""
                 /></a>
               </div>
               <!-- nav toggle button -->
@@ -560,7 +560,7 @@
                                   font-size: 20px;
                                 "
                               >
-                                A&amp;T Engineering are professional industrial
+                                JABM Engineering are professional industrial
                                 equipment’s and services provider for
                                 Automation, Process Control, Instrumentation,
                                 Electrical &amp; strong market and technical
@@ -851,7 +851,7 @@
                               <span
                                 class="text-uppercase"
                                 style="font-family: 'Poppins', sans-serif"
-                                >A&amp;T Engineering</span
+                                >JABM Engineering</span
                               >
                             </div>
                           </div>
@@ -1350,7 +1350,7 @@
               <div class="col-lg-7 about-contant">
                 <div class="m-b20">
                   <h2 class="text-uppercase m-t0 m-b10">
-                    A&amp;T <span class="text-primary"> Engineering </span>
+                    JABM <span class="text-primary"> Engineering </span>
                   </h2>
                   <span class="text-secondry font-16"
                     >Innovation &amp; Adoption</span
@@ -1358,7 +1358,7 @@
                   <div class="clear"></div>
                 </div>
                 <p class="m-b30">
-                  A&amp;T Engineering are professional industrial equipment’s
+                  JABM Engineering are professional industrial equipment’s
                   and services provider for Automation, Process Control,
                   Instrumentation, Electrical &amp; strong market and technical
                   solutions provider. Our uncompromising focus on quality,
