--- a/detail.html
+++ b/detail.html
@@ -190,8 +190,8 @@ Speed Drives and Soft starters and Industrial Process Instrumentation. </p>
               <div class="dlab-box">
                 <div class="dlab-info m-t30">
                   <h4 class="dlab-title m-t0"><a href="#frequency">Frequency Control Inverters (VFDs)</a></h4>
-                  <p>JABM Engineering provides complete drive solutions at competitive price and after-sales services
-for drives, designed to save energy, maximize efficiency and reduce costs. JABM Engineering
+                  <p>JABM provides complete drive solutions at competitive price and after-sales services
+for drives, designed to save energy, maximize efficiency and reduce costs. JABM
 specialize in developing drive solutions for a wide variety of applications in dedicated business
 areas such as water and waste water, chemical, heating &amp; ventilation, refrigeration, food &amp;
 beverage lift application and general industry. The new generation of frequency converters are
