--- a/index.html
+++ b/index.html
@@ -560,7 +560,7 @@
                                   font-size: 20px;
                                 "
                               >
-                                JABM Engineering are professional industrial
+                                JABM are professional industrial
                                 equipment’s and services provider for
                                 Automation, Process Control, Instrumentation,
                                 Electrical &amp; strong market and technical
@@ -851,7 +851,7 @@
                               <span
                                 class="text-uppercase"
                                 style="font-family: 'Poppins', sans-serif"
-                                >JABM Engineering</span
+                                >JABM</span
                               >
                             </div>
                           </div>
@@ -1358,7 +1358,7 @@
                   <div class="clear"></div>
                 </div>
                 <p class="m-b30">
-                  JABM Engineering are professional industrial equipment’s
+                  JABM are professional industrial equipment’s
                   and services provider for Automation, Process Control,
                   Instrumentation, Electrical &amp; strong market and technical
                   solutions provider. Our uncompromising focus on quality,
